JAVA-20: Renamed class and changed url for the project.

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<name>Calendar Calculator</name>
 	<description>Utilities and programs for working with calendar dates.</description>
-	<url>https://bitbucket.org/globalmentor/calendar-calculator</url>
+	<url>http://www.globalmentor.com/software</url>
 	<inceptionYear>2017</inceptionYear>
 
 	<licenses>
