JAVA-20: Fixed tiny format problems, wrong links and renamed class

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<name>Calendar Calculator</name>
 	<description>Utilities and programs for working with calendar dates.</description>
-	<url>http://www.globalmentor.com/software</url>
+	<url>http://www.globalmentor.com/software/</url>
 	<inceptionYear>2017</inceptionYear>
 
 	<licenses>
