--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>args4j</groupId>
+			<artifactId>args4j</artifactId>
+			<version>2.33</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.google.code.findbugs</groupId>
 			<artifactId>jsr305</artifactId>
 			<version>3.0.1</version>
