--- a/pom.xml
+++ b/pom.xml
@@ -2,15 +2,32 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.globalmentor</groupId>
+	<parent>
+		<groupId>com.globalmentor</groupId>
+		<artifactId>globalmentor-root</artifactId>
+		<version>0.8.9</version>
+	</parent>
+
 	<artifactId>calendar-calculator</artifactId>
 	<version>2.0.0-SNAPSHOT</version>
-	<packaging>jar</packaging>
 
 	<name>Calendar Calculator</name>
 	<description>Utilities and programs for working with calendar dates.</description>
-	<url>http://www.globalmentor.com/software/</url>
 	<inceptionYear>2017</inceptionYear>
+
+	<developers>
+		<developer>
+			<name>Garret Wilson</name>
+			<email>garret@globalmentor.com</email>
+			<organization>GlobalMentor, Inc.</organization>
+			<organizationUrl>https://www.globalmentor.com/</organizationUrl>
+		</developer>
+
+		<developer>
+			<name>Magno Nascimento</name>
+			<email>magno.nasc@icloud.com</email>
+		</developer>
+	</developers>
 
 	<licenses>
 		<license>
@@ -20,25 +37,6 @@
 		</license>
 	</licenses>
 
-	<organization>
-		<name>GlobalMentor, Inc.</name>
-		<url>http://www.globalmentor.com/</url>
-	</organization>
-
-	<developers>
-		<developer>
-			<name>Garret Wilson</name>
-			<email>garret@globalmentor.com</email>
-			<organization>GlobalMentor, Inc.</organization>
-			<organizationUrl>http://www.globalmentor.com/</organizationUrl>
-		</developer>
-
-		<developer>
-			<name>Magno Nascimento</name>
-			<email>magno.nasc@icloud.com</email>
-		</developer>
-	</developers>
-
 	<scm>
 		<connection>scm:git:https://bitbucket.org/globalmentor/calendar-calculator.git</connection>
 		<developerConnection>scm:git:https://bitbucket.org/globalmentor/calendar-calculator.git</developerConnection>
@@ -46,9 +44,20 @@
 	</scm>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.release>8</maven.compiler.release> <!-- JDK 9+ required to build -->
+		<maven.compiler.release>17</maven.compiler.release>
 	</properties>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.globalmentor</groupId>
+				<artifactId>globalmentor-parent</artifactId>
+				<version>8.6.0</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<dependencies>
 		<dependency>
@@ -62,164 +71,6 @@
 			<artifactId>args4j</artifactId>
 			<version>2.33</version>
 		</dependency>
-
-		<dependency>
-			<groupId>com.google.code.findbugs</groupId>
-			<artifactId>jsr305</artifactId>
-			<version>3.0.2</version>
-			<optional>true</optional>
-		</dependency>
-
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-library</artifactId>
-			<version>1.3</version>
-			<scope>test</scope>
-		</dependency>
 	</dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.0.1</version>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.1</version>
-			</plugin>
-
-			<plugin>
-				<groupId>org.sonatype.plugins</groupId>
-				<artifactId>nexus-staging-maven-plugin</artifactId>
-				<version>1.6.7</version>
-				<extensions>true</extensions>
-				<configuration>
-					<serverId>ossrh</serverId>
-					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
-					<autoReleaseAfterClose>true</autoReleaseAfterClose>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-
-	<distributionManagement>
-		<snapshotRepository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-		</snapshotRepository>
-		<repository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-		</repository>
-	</distributionManagement>
-
-	<profiles>
-		<profile>
-			<id>release</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-source-plugin</artifactId>
-						<version>3.0.0</version>
-						<executions>
-							<execution>
-								<id>package-sources</id>
-								<goals>
-									<goal>jar-no-fork</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-javadoc-plugin</artifactId>
-						<configuration>
-							<quiet>true</quiet>
-							<detectOfflineLinks>false</detectOfflineLinks>
-							<tags>
-								<tag>
-									<name>apiNote</name>
-									<placement>a</placement>
-									<head>API Note:</head>
-								</tag>
-								<tag>
-									<name>implSpec</name>
-									<placement>a</placement>
-									<head>Implementation Specification:</head>
-								</tag>
-								<tag>
-									<name>implNote</name>
-									<placement>a</placement>
-									<head>Implementation Note:</head>
-								</tag>
-								<tag>
-									<name>param</name>
-								</tag>
-								<tag>
-									<name>return</name>
-								</tag>
-								<tag>
-									<name>throws</name>
-								</tag>
-								<tag>
-									<name>since</name>
-								</tag>
-								<tag>
-									<name>version</name>
-								</tag>
-								<tag>
-									<name>serialData</name>
-								</tag>
-								<tag>
-									<name>see</name>
-								</tag>
-							</tags>
-						</configuration>
-						<executions>
-							<execution>
-								<goals>
-									<goal>jar</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.6</version>
-						<executions>
-							<execution>
-								<id>sign-artifacts</id>
-								<goals>
-									<goal>sign</goal>
-								</goals>
-								<configuration>
-									<keyname>software@globalmentor.com</keyname>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
 </project>
