--- a/pom.xml
+++ b/pom.xml
@@ -45,31 +45,50 @@
 
 	<properties>
 		<maven.compiler.release>17</maven.compiler.release>
+		<exe.main.class>com.globalmentor.calendar.calculator.PrintDayTotals</exe.main.class>
+		<exe.filename>print-day-totals.exe</exe.filename>
 	</properties>
-
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>com.globalmentor</groupId>
-				<artifactId>globalmentor-parent</artifactId>
-				<version>8.6.0</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.globalmentor</groupId>
 			<artifactId>globalmentor-core</artifactId>
+			<version>0.7.0</version>
 		</dependency>
 
 		<dependency>
-			<groupId>args4j</groupId>
-			<artifactId>args4j</artifactId>
-			<version>2.33</version>
+			<groupId>com.globalmentor</groupId>
+			<artifactId>globalmentor-application</artifactId>
+			<version>0.7.5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.clogr</groupId>
+			<artifactId>clogr-logback-provider</artifactId>
+			<version>0.8.0</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<resources>
+			<resource>
+				<directory>${project.basedir}/src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>generate-exe-jar</id>
+						<phase>package</phase>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
