--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.globalmentor</groupId>
 		<artifactId>globalmentor-root</artifactId>
-		<version>0.8.9</version>
+		<version>0.8.10-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>calendar-calculator</artifactId>
@@ -31,8 +31,8 @@
 
 	<licenses>
 		<license>
-			<name>Apache License, Version 2.0</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<name>Apache-2.0</name>
+			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
@@ -46,26 +46,19 @@
 	<properties>
 		<maven.compiler.release>17</maven.compiler.release>
 		<exe.main.class>com.globalmentor.calendar.calculator.PrintDayTotals</exe.main.class>
-		<exe.filename>print-day-totals.exe</exe.filename>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.globalmentor</groupId>
 			<artifactId>globalmentor-core</artifactId>
-			<version>0.7.0</version>
+			<version>0.7.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.globalmentor</groupId>
 			<artifactId>globalmentor-application</artifactId>
-			<version>0.7.5</version>
-		</dependency>
-
-		<dependency>
-			<groupId>io.clogr</groupId>
-			<artifactId>clogr-logback-provider</artifactId>
-			<version>0.8.0</version>
+			<version>0.7.6-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
