--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 
 	<parent>
 		<groupId>com.globalmentor</groupId>
-		<artifactId>globalmentor-root</artifactId>
-		<version>0.8.10-SNAPSHOT</version>
+		<artifactId>globalmentor-base</artifactId>
+		<version>0.7.3-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>calendar-calculator</artifactId>
@@ -52,13 +52,12 @@
 		<dependency>
 			<groupId>com.globalmentor</groupId>
 			<artifactId>globalmentor-core</artifactId>
-			<version>0.7.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.globalmentor</groupId>
 			<artifactId>globalmentor-application</artifactId>
-			<version>0.7.6-SNAPSHOT</version>
+			<version>0.7.8-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
@@ -72,11 +71,33 @@
 
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
 				<executions>
 					<execution>
 						<id>generate-exe-jar</id>
+						<phase>package</phase>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>com.akathist.maven.plugins.launch4j</groupId>
+				<artifactId>launch4j-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>generate-exe</id>
+						<phase>package</phase>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-exe-jar-as-script</id>
 						<phase>package</phase>
 					</execution>
 				</executions>
