--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
 	<parent>
 		<groupId>com.globalmentor</groupId>
 		<artifactId>globalmentor-base</artifactId>
-		<version>0.7.3-SNAPSHOT</version>
+		<version>0.7.2</version>
 	</parent>
 
 	<artifactId>calendar-calculator</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>2.0.0</version>
 
 	<name>Calendar Calculator</name>
 	<description>Utilities and programs for working with calendar dates.</description>
@@ -57,7 +57,7 @@
 		<dependency>
 			<groupId>com.globalmentor</groupId>
 			<artifactId>globalmentor-application</artifactId>
-			<version>0.7.8-SNAPSHOT</version>
+			<version>0.7.7</version>
 		</dependency>
 	</dependencies>
 
